:bug: dont show/hide scrollbar when searching

--- a/css/style.css
+++ b/css/style.css
@@ -71,7 +71,7 @@ a {
 .header-search {
     display: inline-block;
     position: absolute;
-    right: 10px;
+    right: 0;
     top: 0px;
     vertical-align: middle;
 }
@@ -148,6 +148,9 @@ a {
 
 .tips.fadeOut {
     opacity: 0;
+}
+
+.tips.hidden {
     height: 0;
     overflow: hidden;
 }
@@ -200,11 +203,12 @@ a {
     transition: all .2s;
 }
 
-.e404.fadeOut {
+.e404.hidden {
     opacity: 0;
     height: 0;
     margin: 0;
     padding: 0;
+    overflow: hidden;
 }
 .e404.fadeOut .e404-title,
 .e404.fadeOut .e404-message {
